--- a/barter-web/package.json
+++ b/barter-web/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@types/react-avatar-editor": "^13.0.4",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "zod": "^3.24.2"
