--- a/barter-web/package.json
+++ b/barter-web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@types/react-avatar-editor": "^13.0.4",
+    "jwt-decode": "^4.0.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-avatar-editor": "^13.0.2",
