--- a/barter-web/package.json
+++ b/barter-web/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@types/react-avatar-editor": "^13.0.4",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-avatar-editor": "^13.0.2",
