--- a/barter-api/package.json
+++ b/barter-api/package.json
@@ -29,8 +29,10 @@
     "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-session": "^1.18.1",
+    "nestjs-form-data": "^1.9.93",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
