--- a/barter-web/package.json
+++ b/barter-web/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@types/react-avatar-editor": "^13.0.4",
+    "framer-motion": "^12.6.5",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-avatar-editor": "^13.0.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-leaflet": "^5.0.0",
+    "react-tooltip": "^5.28.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
