fix/jwt-authguart

--- a/barter-api/package.json
+++ b/barter-api/package.json
@@ -32,10 +32,12 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "nestjs-form-data": "^1.9.93",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -51,6 +53,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/node-fetch": "^2.6.12",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
