--- a/barter-api/package.json
+++ b/barter-api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -41,7 +42,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "serve-static": "^2.2.0"
+    "serve-static": "^2.2.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.8",
