--- a/barter-web/package.json
+++ b/barter-web/package.json
@@ -15,22 +15,28 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
-    "react": "^19.0.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
     "react-avatar-editor": "^13.0.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^5.0.0",
     "react-tooltip": "^5.28.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.1",
+    "@cypress/webpack-dev-server": "^4.0.2",
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "cypress": "^14.3.2",
+    "html-webpack-plugin": "^5.6.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3",
+    "webpack": "^5.99.7",
+    "webpack-dev-server": "^5.2.1"
   }
 }
