features/add-test-e2e-web-working

--- a/barter-web/cypress/tsconfig.json
+++ b/barter-web/cypress/tsconfig.json
@@ -5,6 +5,6 @@
       "jsx": "react-jsx",
       "types": ["cypress", "node"]
     },
-    "include": ["**/*.ts", "**/*.tsx"]
+    "include": ["**/*.ts", "**/*.tsx", "support/index.d.ts"]
   }
   
