fix-deockerfile-barter-api

--- a/barter-api/Dockerfile
+++ b/barter-api/Dockerfile
@@ -1,21 +1,20 @@
+# Etap 1 – builder
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
 COPY package*.json ./
-COPY prisma ./prisma
+RUN npm install
+
 COPY . .
-
-RUN npm install --legacy-peer-deps
-
-RUN npx prisma generate
-
 RUN npm run build
 
+# Etap 2 – finalny obraz produkcyjny
 FROM node:20-alpine
 
 WORKDIR /app
 
+# Skopiuj tylko potrzebne pliki z buildera
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
@@ -23,4 +22,3 @@ COPY --from=builder /app/package*.json ./
 ENV NODE_ENV=production
 
 CMD ["node", "dist/main"]
-
