--- a/barter-api/Dockerfile
+++ b/barter-api/Dockerfile
@@ -3,10 +3,17 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Instalacja zależności
 COPY package*.json ./
 RUN npm install
 
+# Kopiowanie całego projektu
 COPY . .
+
+# Generowanie klienta Prisma
+RUN npx prisma generate
+
+# Budowanie projektu (Nest -> dist/)
 RUN npm run build
 
 # Etap 2 – finalny obraz produkcyjny
@@ -21,4 +28,6 @@ COPY --from=builder /app/package*.json ./
 
 ENV NODE_ENV=production
 
+# Uruchom backend
 CMD ["node", "dist/main"]
+
